<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal">
    
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView 
            android:id="@+id/rn_iv_image"
            android:contentDescription="@string/descripcion_imagen"
            android:adjustViewBounds="true"
            android:maxWidth="100sp"
            android:maxHeight="100sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <!--android:src="@drawable/ic_launcher"/>-->
        
        <TextView 
            android:id="@+id/rn_tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tags"
            android:textSize="12sp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
        
	   <LinearLayout 
	       android:layout_width="match_parent"
	       android:orientation="horizontal"
	       android:layout_height="wrap_content">
	       
	       <TextView 
	           android:id="@+id/rn_tv_titulo"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/default_titulo"
	           android:textSize="18sp"
	           android:textAppearance="?android:attr/textAppearanceLarge"/>
	    </LinearLayout>    
       
       <TextView 
           android:id="@+id/rn_tv_time"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/default_fecha"
           android:textAppearance="?android:attr/textAppearanceSmall"/>
	   
	   <TextView 
	       android:id="@+id/rn_tv_resumen"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/default_resumen"
	       android:textSize="14sp"
	       android:textAppearance="?android:attr/textAppearanceMedium"/>
	   
	   <TextView 
	       android:id="@+id/rn_tv_autor"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/default_autor"
	       android:textSize="12sp"
	       android:textAppearance="?android:attr/textAppearanceSmall"/>
	</LinearLayout>
    
</LinearLayout>
