<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pikachu_byn"
    tools:context=".activities.NoticiaActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/rn_iv_image"
            android:contentDescription="@string/descripcion_imagen"
            android:adjustViewBounds="true"
            android:maxWidth="600sp"
            android:maxHeight="400sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rn_tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/default_titulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6sp"
        android:layout_marginRight="6sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rn_tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tags"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rn_tv_likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/default_likes"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="6sp"
        android:layout_marginRight="6sp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rn_tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_fecha"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <TextView
            android:id="@+id/rn_tv_resumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_resumen"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <TextView
            android:id="@+id/rn_tv_contenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_contenido"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <TextView
            android:id="@+id/rn_tv_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_autor"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="12sp" />
        
        <TextView
            android:id="@+id/rn_tv_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/default_link"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>